solve overflow horizontally issue

--- a/style.css
+++ b/style.css
@@ -7,10 +7,12 @@
   
   margin: 0;
   padding: 0;
+
 }
 
 html {
   font-size: 13px;
+  overflow-x: hidden;
 }
 
 /* colour root template */
@@ -690,7 +692,7 @@ footer a {
   footer {
     display: grid; 
     grid-template-columns: 3rem 1fr 3rem;
-    grid-template-columns: repeat(3, 1fr)
+    grid-template-columns: repeat(3, 1fr); 
     height:28rem;
     align-items: center;
     justify-items: center;
